# ShopAfrica

./: .gitattributes  README.md  backup.json  cart.html  db.sqlite3  delivery-map.html  delivery.html  home.html  index.html  login.html  loginindex.html  payment.html  pyproject.toml  register.html  registration.html  requirements.txt  stkpush.js  style.css  support.html  urls.py
accounts/: urls.py  views.py
cart/: admin.py  cart.py  context_processors.py  models.py  urls.py  views.py
cart/migrations/: 0001_initial.py  0002_saveditem.py
checkout/: models.py  urls.py  views.py
checkout/migrations/: 0001_initial.py  0002_payment.py  0003_alter_order_delivery_method_and_more.py
checkout/templates/: base.html
image/: Payment - ShopEase.html  Search Bar Functionality Django.html  lipanampesa.html
image/Search Bar Functionality Django_files/: index.html  relay.html  saved_resource.html
image/lipanampesa_files/: 12931-e8613d20f4e9f488.css  19377-b3a1303165c93c4a.mjs  23157-f99853eca7957d5d.mjs  34623-d27d9ce7ae87d53f.mjs  41546-9be19ce83cf07c80.mjs  52180-d6c6ed41bf6e78f2.mjs  57201-70093d2d65d46876.mjs  60790-e1df06ab5851c6e5.mjs  62119-ffd0412ada252ba6.mjs  6881-95cdd0a45065b95b.mjs  73220-4e6e7710d6565da6.mjs  77058-1fb754c9af508d79.mjs  77794-96a290300cd97f0f.mjs  80347-ca01f0914a2d86f9.mjs  83119-c767d1a9f710e441.mjs  84802-9a025ca26aecbb22.mjs  anchor.html  (+10 more)
myproject/: db.sqlite3  requirements.txt  settings.py  urls.py
products/: admin.py  views.py
templates/: home.html  login.html  register.html
video/: mysql-installer-community-8.0.42.0.msi.asc
(+44 files in other folders)
