[project]
name = "myproject"
version = "0.1.0"
description = ""
authors = [
    {name = "its-steo",email = "steomustadd@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django (>=5.2.4,<6.0.0)",
    "djangorestframework (>=3.16.0,<4.0.0)",
    "pillow (>=11.3.0,<12.0.0)",
    "python-decouple (>=3.8,<4.0)",
    "asgiref (==3.8.1)",
    "mysqlclient (==2.2.7)",
    "sqlparse (==0.5.3)",
    "tzdata (==2025.2)",
    "django-allauth (>=65.9.0,<66.0.0)",
    "requests (>=2.32.4,<3.0.0)",
    "pyjwt (>=2.10.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
